--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-scripts": "^2.1.3",
     "url": "^0.11.0",
     "web-vitals": "^2.1.4",
-    "web3": "^0.20.7"
+    "web3": "^1.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@types/web3": "^1.2.2",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6"
