--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "boxicons": "^2.1.2",
     "os-browserify": "^0.3.0",
+    "postcss-cli": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
+    "react-toastify": "^9.0.7",
+    "sweetalert": "^2.1.2",
     "url": "^0.11.0",
     "web-vitals": "^2.1.4",
     "web3": "^1.7.4"
@@ -43,7 +46,7 @@
   },
   "devDependencies": {
     "@types/web3": "^1.2.2",
-    "autoprefixer": "^10.4.7",
+    "autoprefixer": "^9.8.6",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6"
   }
